WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
319695
local files sometimes lead to NSURLErrorDomain:-3,001
https://bugs.webkit.org/show_bug.cgi?id=319695
Summary
local files sometimes lead to NSURLErrorDomain:-3,001
Sean Patterson
Reported
2026-07-17 12:37:58 PDT
rdar://164578060
Attachments
Add attachment
proposed patch, testcase, etc.
Sean Patterson
Comment 1
2026-07-17 13:00:03 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/69670
EWS
Comment 2
2026-07-28 13:26:15 PDT
Committed
318090@main
(22d9c3a6e99c): <
https://commits.webkit.org/318090@main
> Reviewed commits have been landed. Closing PR #69670 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug