Tools/TestWebKitAPI/Tests/WebKit/WKPage/cocoa/FetchLocalFile.mm
@@ -25,6 +25,7 @@
 
 #import "config.h"
 
+#import "Helpers/cocoa/TestNavigationDelegate.h"
 #import "PlatformUtilities.h"
 #import "TestWKWebView.h"
 #import <WebKit/WKPreferencesPrivate.h>
@@ -249,3 +250,56 @@ TEST(WebKit, FetchCookieFile)
 
     FileSystem::deleteFile(fetchFilePath);
 }
+
+// Reloading a local file after a WebContent process crash must re-issue the sandbox extension to the
+// relaunched process, or the load fails with -3001.
+#if ENABLE(BLOCKING_OF_LOCAL_FILE_LOADS_WITHOUT_SANDBOX_EXTENSION) && !PLATFORM(IOS_SIMULATOR)
+TEST(WebKit, ReloadLocalFileAfterWebContentProcessTermination)
+{
+    RetainPtr configuration = adoptNS([[WKWebViewConfiguration alloc] init]);
+    RetainPtr webView = adoptNS([[TestWKWebView alloc] initWithFrame:NSMakeRect(0, 0, 300, 300) configuration:configuration.get() addToWindow:YES]);
+
+    RetainPtr navigationDelegate = adoptNS([[TestNavigationDelegate alloc] init]);
+    [webView setNavigationDelegate:navigationDelegate.get()];
+
+    __block bool navigationDone = false;
+    __block bool navigationSucceeded = false;
+    __block RetainPtr<NSError> provisionalNavigationError;
+    [navigationDelegate setDidFinishNavigation:^(WKWebView *, WKNavigation *) {
+        navigationSucceeded = true;
+        navigationDone = true;
+    }];
+    [navigationDelegate setDidFailProvisionalNavigation:^(WKWebView *, WKNavigation *, NSError *error) {
+        provisionalNavigationError = error;
+        navigationDone = true;
+    }];
+    [navigationDelegate setWebContentProcessDidTerminate:^(WKWebView *crashedWebView, _WKProcessTerminationReason) {
+        // Reload the local file after the crash. This exercises WebPageProxy::launchProcessForReload().
+        [crashedWebView reload];
+    }];
+
+    auto [filePath, fileHandle] = FileSystem::openTemporaryFile("ReloadLocalFileAfterCrash"_s, ".html"_s);
+    fileHandle.write("<body>local file loaded</body>"_s.span8());
+    fileHandle = { };
+    RetainPtr nsFileURL = URL::fileURLWithFileSystemPath(filePath).createNSURL();
+
+    // Initial load of the local file succeeds and grants read access.
+    [webView loadFileURL:nsFileURL.get() allowingReadAccessToURL:[nsFileURL URLByDeletingLastPathComponent]];
+    TestWebKitAPI::Util::run(&navigationDone);
+    EXPECT_TRUE(navigationSucceeded);
+
+    // Crash the WebContent process; the terminate handler reloads. The reload must succeed rather
+    // than fail with -3001 once the sandbox extension is re-issued to the relaunched process.
+    navigationDone = false;
+    navigationSucceeded = false;
+    provisionalNavigationError = nil;
+    [webView _killWebContentProcess];
+    TestWebKitAPI::Util::run(&navigationDone);
+
+    EXPECT_TRUE(navigationSucceeded);
+    if (!navigationSucceeded)
+        EXPECT_NE([provisionalNavigationError code], NSURLErrorCannotOpenFile);
+
+    FileSystem::deleteFile(filePath);
+}
+#endif // ENABLE(BLOCKING_OF_LOCAL_FILE_LOADS_WITHOUT_SANDBOX_EXTENSION) && !PLATFORM(IOS_SIMULATOR)
